# skillfy-poc

./: .env.example  .gitignore  README.md  RESEARCH_LOCAL_PIPELINE.md  common.py  dub_poc.py  kokoro_dub_poc.py  pyproject.toml  requirements-local.txt  timed_chatterbox_dub_poc.py  timed_kokoro_dub_poc.py
experiments/: README.md  indic_parler_tts_dub_poc.py  indicf5_dub_poc.py  timed_indicf5_dub_poc.py
